src/test/ui/indexing-requires-a-uint.stderr
error[E0277]: the type `[{integer}]` cannot be indexed by `u8`
  --> $DIR/indexing-requires-a-uint.rs:6:5
   |
LL |     [0][0u8];
   |     ^^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[{integer}]>` is not implemented for `u8`
   = help: the trait `SliceIndex<[T]>` is implemented for `usize`
   = note: required because of the requirements on the impl of `Index<u8>` for `[{integer}]`

error[E0308]: mismatched types
  --> $DIR/indexing-requires-a-uint.rs:12:18
   |
LL |     bar::<isize>(i);  // i should not be re-coerced back to an isize
   |     ------------ ^ expected `isize`, found `usize`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/indexing-requires-a-uint.rs:5:8
   |
LL |     fn bar<T>(_: T) {}
   |        ^^^    ----

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
